# VirusMaps

./: README.md  pyproject.toml
tests/: test_virusmaps.py
virusmaps/: draw_virus_map.py  疫情地图.html
