[tool.poetry]
name = "VirusMaps"
version = "0.1.0"
description = ""
authors = ["zhouliwei <zhoulw@114995.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.22.0"
pyecharts = "^1.6.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
